// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TransactionRow > should omit the currency for transactions from test networks 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="transition-colors duration-100 border-b last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800 border-dashed cursor-pointer table-row table-row-unselected group relative"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex px-3 transition-colors duration-100 pl-3 ml-3 rounded-l dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200 items-start pr-0 lg:pr-3 xl:min-h-11 xl:max-h-11 xl:pt-2.5 lg:min-w-36 min-h-[66px] py-1 my-0 md-lg:min-h-14"
          >
            <div
              class="flex flex-col gap-1 font-semibold"
            >
              <div
                class="flex flex-col gap-1 font-semibold"
              >
                <a
                  class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-none text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 ring-focus group/inner inline-block"
                  data-ring-focus-margin="-m-1"
                  data-testid="Link"
                  href="https://live.arkscan.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
                  rel="noopener noreferrer"
                >
                  <span
                    class="break-all border-b border-transparent transition-colors delay-100 duration-200 hover:border-current"
                  >
                    <span
                      class="text-sm"
                    >
                      <span
                        class="no-ligatures cursor-pointer text-theme-primary-600"
                        data-testid="TransactionRow__id"
                      >
                        ea63b…5c79b
                      </span>
                    </span>
                  </span>
                </a>
              </div>
              <span
                class="text-xs text-theme-secondary-700 xl:hidden"
              >
                <span
                  data-testid="TimeAgo"
                >
                  A few seconds ago
                </span>
              </span>
            </div>
          </div>
        </td>
        <td
          class="hidden xl:table-cell"
          data-testid="TransactionRow__timestamp"
        >
          <div
            class="flex px-3 transition-colors duration-100 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200 text-sm text-theme-secondary-900 dark:text-theme-secondary-200 font-semibold items-start my-1 min-h-11 xl:max-h-11 xl:pt-3 xl:min-w-32"
          >
            <span
              data-testid="TimeAgo"
            >
              A few seconds ago
            </span>
          </div>
        </td>
        <td>
          <div
            class="flex px-3 transition-colors duration-100 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200 items-start xl:min-h-11 xl:pt-3 min-h-[66px] py-1 my-0 md-lg:min-h-14 md-lg:pt-2 lg:w-24 lg:min-w-24 xl:min-w-38 xl:w-auto"
          >
            <div
              class="inline-block font-semibold overflow-hidden no-ligatures text-theme-secondary-700 bg-theme-secondary-200 border-theme-secondary-200 dark:border-theme-secondary-800 dark:text-theme-secondary-500 dark:bg-transparent group-hover:bg-theme-secondary-300 dark:group-hover:bg-transparent text-xs leading-[15px] max-w-40 truncate whitespace-nowrap rounded px-1 py-[3px] dark:border"
              data-testid="TransactionRow__type"
            >
              Transfer
            </div>
          </div>
        </td>
        <td
          class=""
        >
          <div
            class="flex transition-colors duration-100 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200 space-x-4 items-start px-0 lg:px-3 xl:pt-3 xl:min-h-11 min-h-16 my-1 py-2"
          >
            <div
              class="flex grow flex-col gap-2"
            >
              <div
                class="flex w-full flex-row gap-2"
                data-testid="TransactionRowAddressing__container_advanced_sender"
              >
                <div
                  class="inline-block font-semibold overflow-hidden no-ligatures text-theme-secondary-700 bg-theme-secondary-200 border-theme-secondary-200 dark:border-theme-secondary-800 dark:text-theme-secondary-500 dark:bg-transparent group-hover:bg-theme-secondary-300 dark:group-hover:bg-transparent text-xs leading-[15px] !flex h-[21px] w-12 min-w-12 items-center justify-center rounded px-1 py-[3px] dark:border"
                  data-testid="TransactionRowAddressing__label"
                >
                  From
                </div>
                <div
                  class="flex min-w-36 grow items-center justify-between space-x-4"
                >
                  <div
                    class="grow"
                    data-testid="TransactionRowAddressing__address-container"
                  >
                    <div
                      class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                    >
                      <span
                        class="font-semibold text-sm text-theme-text"
                        data-testid="Address__alias"
                      >
                        <span
                          class="no-ligatures transition-colors duration-200"
                          data-testid="TruncateEnd"
                        >
                          Mainsail Wallet …
                        </span>
                      </span>
                    </div>
                  </div>
                  <button
                    class="ring-focus relative focus:outline-none"
                    data-ring-focus-margin="-m-1"
                    data-testid="clipboard-icon__wrapper"
                    type="button"
                  >
                    <div
                      class="text-theme-secondary-700 hover:text-theme-primary-700 dark:text-theme-secondary-600 dark:hover:text-white"
                    >
                      <div
                        style="height: 16px; width: 16px;"
                      >
                        <svg
                          id="copy"
                          style="height: 100%; width: 100%;"
                          viewBox="0 0 20 20"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <g
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          >
                            <path
                              d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                            />
                            <path
                              d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                            />
                          </g>
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                class="md-lg:hidden"
              >
                <div
                  class="flex w-full flex-row gap-2"
                  data-testid="TransactionRowAddressing__container_advanced_recipient"
                >
                  <div
                    class="inline-block font-semibold overflow-hidden no-ligatures text-theme-secondary-700 bg-theme-secondary-200 border-theme-secondary-200 dark:border-theme-secondary-800 dark:text-theme-secondary-500 dark:bg-transparent group-hover:bg-theme-secondary-300 dark:group-hover:bg-transparent text-xs leading-[15px] !flex h-[21px] w-12 min-w-12 items-center justify-center rounded px-1 py-[3px] dark:border"
                    data-testid="TransactionRowAddressing__label"
                  >
                    To
                  </div>
                  <div
                    class="flex min-w-36 grow items-center justify-between space-x-4"
                  >
                    <div
                      class="grow"
                      data-testid="TransactionRowAddressing__address-container"
                    >
                      <div
                        class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                      >
                        <span
                          class="font-semibold text-sm text-theme-text"
                          data-testid="Address__alias"
                        >
                          <span
                            class="no-ligatures transition-colors duration-200"
                            data-testid="TruncateEnd"
                          >
                            Mainsail Wallet …
                          </span>
                        </span>
                      </div>
                    </div>
                    <button
                      class="ring-focus relative focus:outline-none"
                      data-ring-focus-margin="-m-1"
                      data-testid="clipboard-icon__wrapper"
                      type="button"
                    >
                      <div
                        class="text-theme-secondary-700 hover:text-theme-primary-700 dark:text-theme-secondary-600 dark:hover:text-white"
                      >
                        <div
                          style="height: 16px; width: 16px;"
                        >
                          <svg
                            id="copy"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <g
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            >
                              <path
                                d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                              />
                              <path
                                d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                              />
                            </g>
                          </svg>
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden md-lg:table-cell"
        >
          <div
            class="flex transition-colors duration-100 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200 space-x-4 items-start px-0 lg:px-3 xl:pt-3 xl:min-h-11 min-h-16 my-1 py-2 lg:min-w-36"
          >
            <div
              class="flex w-full flex-row gap-2"
              data-testid="TransactionRowAddressing__container_advanced_recipient"
            >
              <div
                class="inline-block font-semibold overflow-hidden no-ligatures text-theme-secondary-700 bg-theme-secondary-200 border-theme-secondary-200 dark:border-theme-secondary-800 dark:text-theme-secondary-500 dark:bg-transparent group-hover:bg-theme-secondary-300 dark:group-hover:bg-transparent text-xs leading-[15px] !flex h-[21px] w-12 min-w-12 items-center justify-center rounded px-1 py-[3px] dark:border"
                data-testid="TransactionRowAddressing__label"
              >
                To
              </div>
              <div
                class="flex min-w-36 grow items-center justify-between space-x-4"
              >
                <div
                  class="grow"
                  data-testid="TransactionRowAddressing__address-container"
                >
                  <div
                    class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                  >
                    <span
                      class="font-semibold text-sm text-theme-text"
                      data-testid="Address__alias"
                    >
                      <span
                        class="no-ligatures transition-colors duration-200"
                        data-testid="TruncateEnd"
                      >
                        Mainsail Wallet …
                      </span>
                    </span>
                  </div>
                </div>
                <button
                  class="ring-focus relative focus:outline-none"
                  data-ring-focus-margin="-m-1"
                  data-testid="clipboard-icon__wrapper"
                  type="button"
                >
                  <div
                    class="text-theme-secondary-700 hover:text-theme-primary-700 dark:text-theme-secondary-600 dark:hover:text-white"
                  >
                    <div
                      style="height: 16px; width: 16px;"
                    >
                      <svg
                        id="copy"
                        style="height: 100%; width: 100%;"
                        viewBox="0 0 20 20"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <g
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        >
                          <path
                            d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                          />
                          <path
                            d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                          />
                        </g>
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden"
        >
          <div
            class="flex transition-colors duration-100 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200 space-x-4 items-start my-1 px-0 lg:px-3 xl:pt-3 xl:min-h-11 min-h-14 pt-2 mt-1 lg:min-w-36"
          >
            <div
              class="flex w-full flex-row gap-2"
              data-testid="TransactionRowAddressing__container"
            >
              <div
                class="inline-block font-semibold overflow-hidden no-ligatures text-theme-danger-info-text bg-theme-danger-info-background dark:bg-transparent dark:border-theme-danger-info-border text-xs leading-[15px] !flex h-[21px] w-12 min-w-12 items-center justify-center rounded px-1 py-[3px] dark:border"
                data-testid="TransactionRowAddressing__label"
              >
                To
              </div>
              <div
                class="flex min-w-36 grow items-center justify-between space-x-4"
              >
                <div
                  class="grow"
                  data-testid="TransactionRowAddressing__address-container"
                >
                  <div
                    class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                  >
                    <span
                      class="font-semibold text-sm text-theme-text"
                      data-testid="Address__alias"
                    >
                      <span
                        class="no-ligatures transition-colors duration-200"
                        data-testid="TruncateEnd"
                      >
                        Mainsail Wallet …
                      </span>
                    </span>
                  </div>
                </div>
                <button
                  class="ring-focus relative focus:outline-none"
                  data-ring-focus-margin="-m-1"
                  data-testid="clipboard-icon__wrapper"
                  type="button"
                >
                  <div
                    class="text-theme-secondary-700 hover:text-theme-primary-700 dark:text-theme-secondary-600 dark:hover:text-white"
                  >
                    <div
                      style="height: 16px; width: 16px;"
                    >
                      <svg
                        id="copy"
                        style="height: 100%; width: 100%;"
                        viewBox="0 0 20 20"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <g
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        >
                          <path
                            d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                          />
                          <path
                            d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                          />
                        </g>
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden lg:table-cell"
        >
          <div
            class="flex px-3 transition-colors duration-100 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200 justify-end items-start my-1 min-h-14 pt-2 xl:min-h-11 xl:my-0 xl:pt-3 lg:w-34 xl:w-auto"
          >
            <div
              class="flex flex-col items-end gap-1"
            >
              <span
                class="whitespace-nowrap text-sm font-semibold"
                data-testid="Amount"
              >
                121
              </span>
              <span
                class="text-xs font-semibold text-theme-secondary-700 lg:hidden"
                data-testid="TransactionRow__exchange-currency"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  0 ARK
                </span>
              </span>
            </div>
          </div>
        </td>
        <td>
          <div
            class="flex px-3 transition-colors duration-100 pr-3 mr-3 rounded-r dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200 justify-end items-start text-sm text-theme-secondary-900 dark:text-theme-secondary-200 font-semibold xl:min-h-11 xl:my-0 xl:pt-3 min-h-[66px] py-1 my-0 md-lg:min-h-14 md-lg:pt-2"
          >
            <span
              class="whitespace-nowrap"
              data-testid="Amount"
            >
              0 ARK
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`TransactionRow > should render 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="transition-colors duration-100 border-b last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800 border-dashed cursor-pointer table-row table-row-unselected group relative"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex px-3 transition-colors duration-100 pl-3 ml-3 rounded-l dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200 items-start pr-0 lg:pr-3 xl:min-h-11 xl:max-h-11 xl:pt-2.5 lg:min-w-36 min-h-[66px] py-1 my-0 md-lg:min-h-14"
          >
            <div
              class="flex flex-col gap-1 font-semibold"
            >
              <div
                class="flex flex-col gap-1 font-semibold"
              >
                <a
                  class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-none text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 ring-focus group/inner inline-block"
                  data-ring-focus-margin="-m-1"
                  data-testid="Link"
                  href="https://live.arkscan.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
                  rel="noopener noreferrer"
                >
                  <span
                    class="break-all border-b border-transparent transition-colors delay-100 duration-200 hover:border-current"
                  >
                    <span
                      class="text-sm"
                    >
                      <span
                        class="no-ligatures cursor-pointer text-theme-primary-600"
                        data-testid="TransactionRow__id"
                      >
                        ea63b…5c79b
                      </span>
                    </span>
                  </span>
                </a>
              </div>
              <span
                class="text-xs text-theme-secondary-700 xl:hidden"
              >
                <span
                  data-testid="TimeAgo"
                >
                  A few seconds ago
                </span>
              </span>
            </div>
          </div>
        </td>
        <td
          class="hidden xl:table-cell"
          data-testid="TransactionRow__timestamp"
        >
          <div
            class="flex px-3 transition-colors duration-100 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200 text-sm text-theme-secondary-900 dark:text-theme-secondary-200 font-semibold items-start my-1 min-h-11 xl:max-h-11 xl:pt-3 xl:min-w-32"
          >
            <span
              data-testid="TimeAgo"
            >
              A few seconds ago
            </span>
          </div>
        </td>
        <td>
          <div
            class="flex px-3 transition-colors duration-100 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200 items-start xl:min-h-11 xl:pt-3 min-h-[66px] py-1 my-0 md-lg:min-h-14 md-lg:pt-2 lg:w-24 lg:min-w-24 xl:min-w-38 xl:w-auto"
          >
            <div
              class="inline-block font-semibold overflow-hidden no-ligatures text-theme-secondary-700 bg-theme-secondary-200 border-theme-secondary-200 dark:border-theme-secondary-800 dark:text-theme-secondary-500 dark:bg-transparent group-hover:bg-theme-secondary-300 dark:group-hover:bg-transparent text-xs leading-[15px] max-w-40 truncate whitespace-nowrap rounded px-1 py-[3px] dark:border"
              data-testid="TransactionRow__type"
            >
              Transfer
            </div>
          </div>
        </td>
        <td
          class=""
        >
          <div
            class="flex transition-colors duration-100 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200 space-x-4 items-start px-0 lg:px-3 xl:pt-3 xl:min-h-11 min-h-16 my-1 py-2"
          >
            <div
              class="flex grow flex-col gap-2"
            >
              <div
                class="flex w-full flex-row gap-2"
                data-testid="TransactionRowAddressing__container_advanced_sender"
              >
                <div
                  class="inline-block font-semibold overflow-hidden no-ligatures text-theme-secondary-700 bg-theme-secondary-200 border-theme-secondary-200 dark:border-theme-secondary-800 dark:text-theme-secondary-500 dark:bg-transparent group-hover:bg-theme-secondary-300 dark:group-hover:bg-transparent text-xs leading-[15px] !flex h-[21px] w-12 min-w-12 items-center justify-center rounded px-1 py-[3px] dark:border"
                  data-testid="TransactionRowAddressing__label"
                >
                  From
                </div>
                <div
                  class="flex min-w-36 grow items-center justify-between space-x-4"
                >
                  <div
                    class="grow"
                    data-testid="TransactionRowAddressing__address-container"
                  >
                    <div
                      class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                    >
                      <span
                        class="font-semibold text-sm text-theme-text"
                        data-testid="Address__alias"
                      >
                        <span
                          class="no-ligatures transition-colors duration-200"
                          data-testid="TruncateEnd"
                        >
                          Mainsail Wallet …
                        </span>
                      </span>
                    </div>
                  </div>
                  <button
                    class="ring-focus relative focus:outline-none"
                    data-ring-focus-margin="-m-1"
                    data-testid="clipboard-icon__wrapper"
                    type="button"
                  >
                    <div
                      class="text-theme-secondary-700 hover:text-theme-primary-700 dark:text-theme-secondary-600 dark:hover:text-white"
                    >
                      <div
                        style="height: 16px; width: 16px;"
                      >
                        <svg
                          id="copy"
                          style="height: 100%; width: 100%;"
                          viewBox="0 0 20 20"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <g
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          >
                            <path
                              d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                            />
                            <path
                              d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                            />
                          </g>
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                class="md-lg:hidden"
              >
                <div
                  class="flex w-full flex-row gap-2"
                  data-testid="TransactionRowAddressing__container_advanced_recipient"
                >
                  <div
                    class="inline-block font-semibold overflow-hidden no-ligatures text-theme-secondary-700 bg-theme-secondary-200 border-theme-secondary-200 dark:border-theme-secondary-800 dark:text-theme-secondary-500 dark:bg-transparent group-hover:bg-theme-secondary-300 dark:group-hover:bg-transparent text-xs leading-[15px] !flex h-[21px] w-12 min-w-12 items-center justify-center rounded px-1 py-[3px] dark:border"
                    data-testid="TransactionRowAddressing__label"
                  >
                    To
                  </div>
                  <div
                    class="flex min-w-36 grow items-center justify-between space-x-4"
                  >
                    <div
                      class="grow"
                      data-testid="TransactionRowAddressing__address-container"
                    >
                      <div
                        class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                      >
                        <span
                          class="font-semibold text-sm text-theme-text"
                          data-testid="Address__alias"
                        >
                          <span
                            class="no-ligatures transition-colors duration-200"
                            data-testid="TruncateEnd"
                          >
                            Mainsail Wallet …
                          </span>
                        </span>
                      </div>
                    </div>
                    <button
                      class="ring-focus relative focus:outline-none"
                      data-ring-focus-margin="-m-1"
                      data-testid="clipboard-icon__wrapper"
                      type="button"
                    >
                      <div
                        class="text-theme-secondary-700 hover:text-theme-primary-700 dark:text-theme-secondary-600 dark:hover:text-white"
                      >
                        <div
                          style="height: 16px; width: 16px;"
                        >
                          <svg
                            id="copy"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <g
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            >
                              <path
                                d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                              />
                              <path
                                d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                              />
                            </g>
                          </svg>
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden md-lg:table-cell"
        >
          <div
            class="flex transition-colors duration-100 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200 space-x-4 items-start px-0 lg:px-3 xl:pt-3 xl:min-h-11 min-h-16 my-1 py-2 lg:min-w-36"
          >
            <div
              class="flex w-full flex-row gap-2"
              data-testid="TransactionRowAddressing__container_advanced_recipient"
            >
              <div
                class="inline-block font-semibold overflow-hidden no-ligatures text-theme-secondary-700 bg-theme-secondary-200 border-theme-secondary-200 dark:border-theme-secondary-800 dark:text-theme-secondary-500 dark:bg-transparent group-hover:bg-theme-secondary-300 dark:group-hover:bg-transparent text-xs leading-[15px] !flex h-[21px] w-12 min-w-12 items-center justify-center rounded px-1 py-[3px] dark:border"
                data-testid="TransactionRowAddressing__label"
              >
                To
              </div>
              <div
                class="flex min-w-36 grow items-center justify-between space-x-4"
              >
                <div
                  class="grow"
                  data-testid="TransactionRowAddressing__address-container"
                >
                  <div
                    class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                  >
                    <span
                      class="font-semibold text-sm text-theme-text"
                      data-testid="Address__alias"
                    >
                      <span
                        class="no-ligatures transition-colors duration-200"
                        data-testid="TruncateEnd"
                      >
                        Mainsail Wallet …
                      </span>
                    </span>
                  </div>
                </div>
                <button
                  class="ring-focus relative focus:outline-none"
                  data-ring-focus-margin="-m-1"
                  data-testid="clipboard-icon__wrapper"
                  type="button"
                >
                  <div
                    class="text-theme-secondary-700 hover:text-theme-primary-700 dark:text-theme-secondary-600 dark:hover:text-white"
                  >
                    <div
                      style="height: 16px; width: 16px;"
                    >
                      <svg
                        id="copy"
                        style="height: 100%; width: 100%;"
                        viewBox="0 0 20 20"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <g
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        >
                          <path
                            d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                          />
                          <path
                            d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                          />
                        </g>
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden"
        >
          <div
            class="flex transition-colors duration-100 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200 space-x-4 items-start my-1 px-0 lg:px-3 xl:pt-3 xl:min-h-11 min-h-14 pt-2 mt-1 lg:min-w-36"
          >
            <div
              class="flex w-full flex-row gap-2"
              data-testid="TransactionRowAddressing__container"
            >
              <div
                class="inline-block font-semibold overflow-hidden no-ligatures text-theme-danger-info-text bg-theme-danger-info-background dark:bg-transparent dark:border-theme-danger-info-border text-xs leading-[15px] !flex h-[21px] w-12 min-w-12 items-center justify-center rounded px-1 py-[3px] dark:border"
                data-testid="TransactionRowAddressing__label"
              >
                To
              </div>
              <div
                class="flex min-w-36 grow items-center justify-between space-x-4"
              >
                <div
                  class="grow"
                  data-testid="TransactionRowAddressing__address-container"
                >
                  <div
                    class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                  >
                    <span
                      class="font-semibold text-sm text-theme-text"
                      data-testid="Address__alias"
                    >
                      <span
                        class="no-ligatures transition-colors duration-200"
                        data-testid="TruncateEnd"
                      >
                        Mainsail Wallet …
                      </span>
                    </span>
                  </div>
                </div>
                <button
                  class="ring-focus relative focus:outline-none"
                  data-ring-focus-margin="-m-1"
                  data-testid="clipboard-icon__wrapper"
                  type="button"
                >
                  <div
                    class="text-theme-secondary-700 hover:text-theme-primary-700 dark:text-theme-secondary-600 dark:hover:text-white"
                  >
                    <div
                      style="height: 16px; width: 16px;"
                    >
                      <svg
                        id="copy"
                        style="height: 100%; width: 100%;"
                        viewBox="0 0 20 20"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <g
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        >
                          <path
                            d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                          />
                          <path
                            d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                          />
                        </g>
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden lg:table-cell"
        >
          <div
            class="flex px-3 transition-colors duration-100 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200 justify-end items-start my-1 min-h-14 pt-2 xl:min-h-11 xl:my-0 xl:pt-3 lg:w-34 xl:w-auto"
          >
            <div
              class="flex flex-col items-end gap-1"
            >
              <span
                class="whitespace-nowrap text-sm font-semibold"
                data-testid="Amount"
              >
                121
              </span>
              <span
                class="text-xs font-semibold text-theme-secondary-700 lg:hidden"
                data-testid="TransactionRow__exchange-currency"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  $0.00
                </span>
              </span>
            </div>
          </div>
        </td>
        <td>
          <div
            class="flex px-3 transition-colors duration-100 pr-3 mr-3 rounded-r dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200 justify-end items-start text-sm text-theme-secondary-900 dark:text-theme-secondary-200 font-semibold xl:min-h-11 xl:my-0 xl:pt-3 min-h-[66px] py-1 my-0 md-lg:min-h-14 md-lg:pt-2"
          >
            <span
              class="whitespace-nowrap"
              data-testid="Amount"
            >
              $0.00
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`TransactionRow > should render responsive 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="transition-colors duration-100 border-b last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800 border-dashed cursor-pointer table-row table-row-unselected group group !border-b-0"
        data-testid="TableRow"
      >
        <td
          data-testid="TableRow__mobile"
        >
          <div
            class="w-full cursor-pointer overflow-hidden rounded border border-theme-secondary-300 bg-white dark:border-theme-secondary-800 dark:bg-theme-background mb-3"
          >
            <div
              class="flex h-10 w-full items-center justify-between bg-theme-secondary-100 px-4 dark:bg-black"
            >
              <div
                class="max-w-32"
              >
                <div
                  class="flex flex-col gap-1 font-semibold"
                >
                  <a
                    class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-none text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 ring-focus group/inner inline-block"
                    data-ring-focus-margin="-m-1"
                    data-testid="Link"
                    href="https://live.arkscan.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
                    rel="noopener noreferrer"
                  >
                    <span
                      class="break-all border-b border-transparent transition-colors delay-100 duration-200 hover:border-current"
                    >
                      <span
                        class="text-sm"
                      >
                        <span
                          class="no-ligatures cursor-pointer text-theme-primary-600"
                          data-testid="TransactionRow__id"
                        >
                          ea63…c79b
                        </span>
                      </span>
                    </span>
                  </a>
                </div>
              </div>
              <div
                class="flex flex-row items-center"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 sm:block"
                  data-testid="TransactionRow__timestamp"
                >
                  <span
                    data-testid="TimeAgo"
                  >
                    A few seconds ago
                  </span>
                </span>
              </div>
            </div>
            <div
              class="flex w-full flex-col gap-4 px-4 pb-4 pt-3 sm:grid sm:grid-cols-[200px_auto_130px] sm:pb-4"
            >
              <div
                class="flex flex-col gap-2 w-full"
                data-testid="TransactionRowMobile__label"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
                >
                  Transfer
                </span>
                <div
                  class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
                >
                  <div
                    class="flex flex-col gap-2"
                  >
                    <div
                      class="flex w-full flex-row gap-2"
                      data-testid="TransactionRowAddressing__container_advanced_sender"
                    >
                      <div
                        class="inline-block font-semibold overflow-hidden no-ligatures text-theme-secondary-700 bg-theme-secondary-200 border-theme-secondary-200 dark:border-theme-secondary-800 dark:text-theme-secondary-500 dark:bg-transparent group-hover:bg-theme-secondary-300 dark:group-hover:bg-transparent text-xs leading-[15px] !flex h-[21px] w-12 min-w-12 items-center justify-center rounded px-1 py-[3px] dark:border"
                        data-testid="TransactionRowAddressing__label"
                      >
                        From
                      </div>
                      <div
                        class="flex min-w-36 grow items-center justify-between space-x-4"
                      >
                        <div
                          class="grow"
                          data-testid="TransactionRowAddressing__address-container"
                        >
                          <div
                            class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                          >
                            <span
                              class="font-semibold text-sm text-theme-text"
                              data-testid="Address__alias"
                            >
                              <span
                                class="no-ligatures transition-colors duration-200"
                                data-testid="TruncateEnd"
                              >
                                Mainsail Wallet …
                              </span>
                            </span>
                          </div>
                        </div>
                        <button
                          class="ring-focus relative focus:outline-none"
                          data-ring-focus-margin="-m-1"
                          data-testid="clipboard-icon__wrapper"
                          type="button"
                        >
                          <div
                            class="text-theme-secondary-700 hover:text-theme-primary-700 dark:text-theme-secondary-600 dark:hover:text-white"
                          >
                            <div
                              style="height: 16px; width: 16px;"
                            >
                              <svg
                                id="copy"
                                style="height: 100%; width: 100%;"
                                viewBox="0 0 20 20"
                                x="0"
                                xml:space="preserve"
                                xmlns="http://www.w3.org/2000/svg"
                                y="0"
                              >
                                <g
                                  fill="none"
                                  stroke="currentColor"
                                  stroke-linecap="round"
                                  stroke-linejoin="round"
                                  stroke-width="2"
                                >
                                  <path
                                    d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                                  />
                                  <path
                                    d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                                  />
                                </g>
                              </svg>
                            </div>
                          </div>
                        </button>
                      </div>
                    </div>
                    <div
                      class="flex w-full flex-row gap-2"
                      data-testid="TransactionRowAddressing__container_advanced_recipient"
                    >
                      <div
                        class="inline-block font-semibold overflow-hidden no-ligatures text-theme-secondary-700 bg-theme-secondary-200 border-theme-secondary-200 dark:border-theme-secondary-800 dark:text-theme-secondary-500 dark:bg-transparent group-hover:bg-theme-secondary-300 dark:group-hover:bg-transparent text-xs leading-[15px] !flex h-[21px] w-12 min-w-12 items-center justify-center rounded px-1 py-[3px] dark:border"
                        data-testid="TransactionRowAddressing__label"
                      >
                        To
                      </div>
                      <div
                        class="flex min-w-36 grow items-center justify-between space-x-4"
                      >
                        <div
                          class="grow"
                          data-testid="TransactionRowAddressing__address-container"
                        >
                          <div
                            class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                          >
                            <span
                              class="font-semibold text-sm text-theme-text"
                              data-testid="Address__alias"
                            >
                              <span
                                class="no-ligatures transition-colors duration-200"
                                data-testid="TruncateEnd"
                              >
                                Mainsail Wallet …
                              </span>
                            </span>
                          </div>
                        </div>
                        <button
                          class="ring-focus relative focus:outline-none"
                          data-ring-focus-margin="-m-1"
                          data-testid="clipboard-icon__wrapper"
                          type="button"
                        >
                          <div
                            class="text-theme-secondary-700 hover:text-theme-primary-700 dark:text-theme-secondary-600 dark:hover:text-white"
                          >
                            <div
                              style="height: 16px; width: 16px;"
                            >
                              <svg
                                id="copy"
                                style="height: 100%; width: 100%;"
                                viewBox="0 0 20 20"
                                x="0"
                                xml:space="preserve"
                                xmlns="http://www.w3.org/2000/svg"
                                y="0"
                              >
                                <g
                                  fill="none"
                                  stroke="currentColor"
                                  stroke-linecap="round"
                                  stroke-linejoin="round"
                                  stroke-width="2"
                                >
                                  <path
                                    d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                                  />
                                  <path
                                    d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                                  />
                                </g>
                              </svg>
                            </div>
                          </div>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex flex-col gap-2 w-full"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
                >
                  Amount (ARK)
                </span>
                <div
                  class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
                >
                  <span
                    class="whitespace-nowrap text-sm font-semibold"
                    data-testid="Amount"
                  >
                    121
                  </span>
                </div>
              </div>
              <div
                class="flex flex-col gap-2 w-full"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
                >
                  Fiat Value
                </span>
                <div
                  class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
                >
                  <span
                    class="whitespace-nowrap"
                    data-testid="Amount"
                  >
                    $0.00
                  </span>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`TransactionRow > should render responsive 2`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="transition-colors duration-100 border-b last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800 border-dashed cursor-pointer table-row table-row-unselected group group !border-b-0"
        data-testid="TableRow"
      >
        <td
          data-testid="TableRow__mobile"
        >
          <div
            class="w-full cursor-pointer overflow-hidden rounded border border-theme-secondary-300 bg-white dark:border-theme-secondary-800 dark:bg-theme-background mb-3"
          >
            <div
              class="flex h-10 w-full items-center justify-between bg-theme-secondary-100 px-4 dark:bg-black"
            >
              <div
                class="max-w-32"
              >
                <div
                  class="flex flex-col gap-1 font-semibold"
                >
                  <a
                    class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-none text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 ring-focus group/inner inline-block"
                    data-ring-focus-margin="-m-1"
                    data-testid="Link"
                    href="https://live.arkscan.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
                    rel="noopener noreferrer"
                  >
                    <span
                      class="break-all border-b border-transparent transition-colors delay-100 duration-200 hover:border-current"
                    >
                      <span
                        class="text-sm"
                      >
                        <span
                          class="no-ligatures cursor-pointer text-theme-primary-600"
                          data-testid="TransactionRow__id"
                        >
                          ea63…c79b
                        </span>
                      </span>
                    </span>
                  </a>
                </div>
              </div>
              <div
                class="flex flex-row items-center"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 sm:block"
                  data-testid="TransactionRow__timestamp"
                >
                  <span
                    data-testid="TimeAgo"
                  >
                    A few seconds ago
                  </span>
                </span>
              </div>
            </div>
            <div
              class="flex w-full flex-col gap-4 px-4 pb-4 pt-3 sm:grid sm:grid-cols-[200px_auto_130px] sm:pb-4"
            >
              <div
                class="flex flex-col gap-2 w-full"
                data-testid="TransactionRowMobile__label"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
                >
                  Transfer
                </span>
                <div
                  class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
                >
                  <div
                    class="flex flex-col gap-2"
                  >
                    <div
                      class="flex w-full flex-row gap-2"
                      data-testid="TransactionRowAddressing__container_advanced_sender"
                    >
                      <div
                        class="inline-block font-semibold overflow-hidden no-ligatures text-theme-secondary-700 bg-theme-secondary-200 border-theme-secondary-200 dark:border-theme-secondary-800 dark:text-theme-secondary-500 dark:bg-transparent group-hover:bg-theme-secondary-300 dark:group-hover:bg-transparent text-xs leading-[15px] !flex h-[21px] w-12 min-w-12 items-center justify-center rounded px-1 py-[3px] dark:border"
                        data-testid="TransactionRowAddressing__label"
                      >
                        From
                      </div>
                      <div
                        class="flex min-w-36 grow items-center justify-between space-x-4"
                      >
                        <div
                          class="grow"
                          data-testid="TransactionRowAddressing__address-container"
                        >
                          <div
                            class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                          >
                            <span
                              class="font-semibold text-sm text-theme-text"
                              data-testid="Address__alias"
                            >
                              <span
                                class="no-ligatures transition-colors duration-200"
                                data-testid="TruncateEnd"
                              >
                                Mainsail Wallet …
                              </span>
                            </span>
                          </div>
                        </div>
                        <button
                          class="ring-focus relative focus:outline-none"
                          data-ring-focus-margin="-m-1"
                          data-testid="clipboard-icon__wrapper"
                          type="button"
                        >
                          <div
                            class="text-theme-secondary-700 hover:text-theme-primary-700 dark:text-theme-secondary-600 dark:hover:text-white"
                          >
                            <div
                              style="height: 16px; width: 16px;"
                            >
                              <svg
                                id="copy"
                                style="height: 100%; width: 100%;"
                                viewBox="0 0 20 20"
                                x="0"
                                xml:space="preserve"
                                xmlns="http://www.w3.org/2000/svg"
                                y="0"
                              >
                                <g
                                  fill="none"
                                  stroke="currentColor"
                                  stroke-linecap="round"
                                  stroke-linejoin="round"
                                  stroke-width="2"
                                >
                                  <path
                                    d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                                  />
                                  <path
                                    d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                                  />
                                </g>
                              </svg>
                            </div>
                          </div>
                        </button>
                      </div>
                    </div>
                    <div
                      class="flex w-full flex-row gap-2"
                      data-testid="TransactionRowAddressing__container_advanced_recipient"
                    >
                      <div
                        class="inline-block font-semibold overflow-hidden no-ligatures text-theme-secondary-700 bg-theme-secondary-200 border-theme-secondary-200 dark:border-theme-secondary-800 dark:text-theme-secondary-500 dark:bg-transparent group-hover:bg-theme-secondary-300 dark:group-hover:bg-transparent text-xs leading-[15px] !flex h-[21px] w-12 min-w-12 items-center justify-center rounded px-1 py-[3px] dark:border"
                        data-testid="TransactionRowAddressing__label"
                      >
                        To
                      </div>
                      <div
                        class="flex min-w-36 grow items-center justify-between space-x-4"
                      >
                        <div
                          class="grow"
                          data-testid="TransactionRowAddressing__address-container"
                        >
                          <div
                            class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                          >
                            <span
                              class="font-semibold text-sm text-theme-text"
                              data-testid="Address__alias"
                            >
                              <span
                                class="no-ligatures transition-colors duration-200"
                                data-testid="TruncateEnd"
                              >
                                Mainsail Wallet …
                              </span>
                            </span>
                          </div>
                        </div>
                        <button
                          class="ring-focus relative focus:outline-none"
                          data-ring-focus-margin="-m-1"
                          data-testid="clipboard-icon__wrapper"
                          type="button"
                        >
                          <div
                            class="text-theme-secondary-700 hover:text-theme-primary-700 dark:text-theme-secondary-600 dark:hover:text-white"
                          >
                            <div
                              style="height: 16px; width: 16px;"
                            >
                              <svg
                                id="copy"
                                style="height: 100%; width: 100%;"
                                viewBox="0 0 20 20"
                                x="0"
                                xml:space="preserve"
                                xmlns="http://www.w3.org/2000/svg"
                                y="0"
                              >
                                <g
                                  fill="none"
                                  stroke="currentColor"
                                  stroke-linecap="round"
                                  stroke-linejoin="round"
                                  stroke-width="2"
                                >
                                  <path
                                    d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                                  />
                                  <path
                                    d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                                  />
                                </g>
                              </svg>
                            </div>
                          </div>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex flex-col gap-2 w-full"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
                >
                  Amount (ARK)
                </span>
                <div
                  class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
                >
                  <span
                    class="whitespace-nowrap text-sm font-semibold"
                    data-testid="Amount"
                  >
                    121
                  </span>
                </div>
              </div>
              <div
                class="flex flex-col gap-2 w-full"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
                >
                  Fiat Value
                </span>
                <div
                  class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
                >
                  <span
                    class="whitespace-nowrap"
                    data-testid="Amount"
                  >
                    $0.00
                  </span>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`TransactionRow > should render skeleton 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="transition-colors duration-100 border-b last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800 border-dashed group max-xl:h-[4.25rem]"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 pl-3 ml-3 rounded-l dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <div
              class="hidden xl:block"
            >
              <span
                aria-busy="true"
                aria-live="polite"
                class="flex w-auto max-w-full items-center overflow-hidden leading-none"
              >
                <span
                  class="react-loading-skeleton"
                  style="width: 90px; height: 17px;"
                >
                  ‌
                </span>
                <br />
              </span>
            </div>
            <div
              class="max-xl:pt-2 flex flex-col xl:hidden"
            >
              <span
                aria-busy="true"
                aria-live="polite"
                class="flex w-auto max-w-full items-center overflow-hidden leading-none"
              >
                <span
                  class="react-loading-skeleton"
                  style="width: 90px; height: 13px;"
                >
                  ‌
                </span>
                <br />
              </span>
              <div
                class="mt-1"
              >
                <span
                  aria-busy="true"
                  aria-live="polite"
                  class="flex w-auto max-w-full items-center overflow-hidden leading-none"
                >
                  <span
                    class="react-loading-skeleton"
                    style="width: 68px; height: 10px;"
                  >
                    ‌
                  </span>
                  <br />
                </span>
              </div>
            </div>
          </div>
        </td>
        <td
          class="table-cell sm:hidden xl:table-cell"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <span
              aria-busy="true"
              aria-live="polite"
              class="flex w-auto max-w-full items-center overflow-hidden leading-none"
            >
              <span
                class="react-loading-skeleton"
                style="width: 70px; height: 16px;"
              >
                ‌
              </span>
              <br />
            </span>
          </div>
        </td>
        <td>
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <div
              class="flex items-center"
            >
              <span
                aria-busy="true"
                aria-live="polite"
                class="flex w-auto max-w-full items-center overflow-hidden leading-none"
              >
                <span
                  class="react-loading-skeleton"
                  style="width: 80px; height: 16px;"
                >
                  ‌
                </span>
                <br />
              </span>
            </div>
          </div>
        </td>
        <td>
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <div
              class="flex flex-col gap-1"
            >
              <div
                class="flex flex-row gap-2"
              >
                <span
                  aria-busy="true"
                  aria-live="polite"
                  class="flex w-auto max-w-full items-center overflow-hidden leading-none"
                >
                  <span
                    class="react-loading-skeleton"
                    style="width: 37px; height: 17px;"
                  >
                    ‌
                  </span>
                  <br />
                </span>
                <span
                  aria-busy="true"
                  aria-live="polite"
                  class="flex w-auto max-w-full items-center overflow-hidden leading-none"
                >
                  <span
                    class="react-loading-skeleton"
                    style="width: 1px; height: 17px;"
                  >
                    ‌
                  </span>
                  <br />
                </span>
              </div>
              <div
                class="flex flex-row gap-2 md-lg:hidden"
                data-testid="TransactionRowSkeleton__recipient-mobile"
              >
                <span
                  aria-busy="true"
                  aria-live="polite"
                  class="flex w-auto max-w-full items-center overflow-hidden leading-none"
                >
                  <span
                    class="react-loading-skeleton"
                    style="width: 37px; height: 17px;"
                  >
                    ‌
                  </span>
                  <br />
                </span>
                <span
                  aria-busy="true"
                  aria-live="polite"
                  class="flex w-auto max-w-full items-center overflow-hidden leading-none"
                >
                  <span
                    class="react-loading-skeleton"
                    style="width: 1px; height: 17px;"
                  >
                    ‌
                  </span>
                  <br />
                </span>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden md-lg:table-cell"
          data-testid="TransactionRowSkeleton__sender-desktop"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <div
              class="flex flex-row gap-2"
            >
              <span
                aria-busy="true"
                aria-live="polite"
                class="flex w-auto max-w-full items-center overflow-hidden leading-none"
              >
                <span
                  class="react-loading-skeleton"
                  style="width: 37px; height: 17px;"
                >
                  ‌
                </span>
                <br />
              </span>
              <span
                aria-busy="true"
                aria-live="polite"
                class="flex w-auto max-w-full items-center overflow-hidden leading-none"
              >
                <span
                  class="react-loading-skeleton"
                  style="width: 1px; height: 17px;"
                >
                  ‌
                </span>
                <br />
              </span>
            </div>
          </div>
        </td>
        <td
          class="table-cell sm:hidden lg:table-cell"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200 justify-end"
          >
            <div
              class="rounded border border-theme-secondary-300 p-1 px-2 dark:border-theme-secondary-800"
            >
              <span
                aria-busy="true"
                aria-live="polite"
                class="flex w-auto max-w-full items-center overflow-hidden leading-none"
              >
                <span
                  class="react-loading-skeleton"
                  style="width: 1px; height: 14px;"
                >
                  ‌
                </span>
                <br />
              </span>
            </div>
          </div>
        </td>
        <td
          class="hidden md:table-cell"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 pr-3 mr-3 rounded-r dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200 justify-end"
          >
            <div
              class="hidden lg:block"
            >
              <span
                aria-busy="true"
                aria-live="polite"
                class="flex w-auto max-w-full items-center overflow-hidden leading-none"
              >
                <span
                  class="react-loading-skeleton"
                  style="width: 0px; height: 17px;"
                >
                  ‌
                </span>
                <br />
              </span>
            </div>
            <div
              class="-mr-3 flex flex-col items-end pt-px lg:hidden"
            >
              <div
                class="rounded border border-theme-secondary-300 p-[2px] dark:border-theme-secondary-800"
              >
                <span
                  aria-busy="true"
                  aria-live="polite"
                  class="flex w-auto max-w-full items-center overflow-hidden leading-none"
                >
                  <span
                    class="react-loading-skeleton"
                    style="width: 1px; height: 15px;"
                  >
                    ‌
                  </span>
                  <br />
                </span>
              </div>
              <div
                class="mt-px"
              >
                <span
                  aria-busy="true"
                  aria-live="polite"
                  class="flex w-auto max-w-full items-center overflow-hidden leading-none"
                >
                  <span
                    class="react-loading-skeleton"
                    style="width: 50px; height: 9px;"
                  >
                    ‌
                  </span>
                  <br />
                </span>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`TransactionRow > should render with currency 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="transition-colors duration-100 border-b last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800 border-dashed cursor-pointer table-row table-row-unselected group relative"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex px-3 transition-colors duration-100 pl-3 ml-3 rounded-l dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200 items-start pr-0 lg:pr-3 xl:min-h-11 xl:max-h-11 xl:pt-2.5 lg:min-w-36 min-h-[66px] py-1 my-0 md-lg:min-h-14"
          >
            <div
              class="flex flex-col gap-1 font-semibold"
            >
              <div
                class="flex flex-col gap-1 font-semibold"
              >
                <a
                  class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-none text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 ring-focus group/inner inline-block"
                  data-ring-focus-margin="-m-1"
                  data-testid="Link"
                  href="https://live.arkscan.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
                  rel="noopener noreferrer"
                >
                  <span
                    class="break-all border-b border-transparent transition-colors delay-100 duration-200 hover:border-current"
                  >
                    <span
                      class="text-sm"
                    >
                      <span
                        class="no-ligatures cursor-pointer text-theme-primary-600"
                        data-testid="TransactionRow__id"
                      >
                        ea63b…5c79b
                      </span>
                    </span>
                  </span>
                </a>
              </div>
              <span
                class="text-xs text-theme-secondary-700 xl:hidden"
              >
                <span
                  data-testid="TimeAgo"
                >
                  A few seconds ago
                </span>
              </span>
            </div>
          </div>
        </td>
        <td
          class="hidden xl:table-cell"
          data-testid="TransactionRow__timestamp"
        >
          <div
            class="flex px-3 transition-colors duration-100 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200 text-sm text-theme-secondary-900 dark:text-theme-secondary-200 font-semibold items-start my-1 min-h-11 xl:max-h-11 xl:pt-3 xl:min-w-32"
          >
            <span
              data-testid="TimeAgo"
            >
              A few seconds ago
            </span>
          </div>
        </td>
        <td>
          <div
            class="flex px-3 transition-colors duration-100 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200 items-start xl:min-h-11 xl:pt-3 min-h-[66px] py-1 my-0 md-lg:min-h-14 md-lg:pt-2 lg:w-24 lg:min-w-24 xl:min-w-38 xl:w-auto"
          >
            <div
              class="inline-block font-semibold overflow-hidden no-ligatures text-theme-secondary-700 bg-theme-secondary-200 border-theme-secondary-200 dark:border-theme-secondary-800 dark:text-theme-secondary-500 dark:bg-transparent group-hover:bg-theme-secondary-300 dark:group-hover:bg-transparent text-xs leading-[15px] max-w-40 truncate whitespace-nowrap rounded px-1 py-[3px] dark:border"
              data-testid="TransactionRow__type"
            >
              Transfer
            </div>
          </div>
        </td>
        <td
          class=""
        >
          <div
            class="flex transition-colors duration-100 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200 space-x-4 items-start px-0 lg:px-3 xl:pt-3 xl:min-h-11 min-h-16 my-1 py-2"
          >
            <div
              class="flex grow flex-col gap-2"
            >
              <div
                class="flex w-full flex-row gap-2"
                data-testid="TransactionRowAddressing__container_advanced_sender"
              >
                <div
                  class="inline-block font-semibold overflow-hidden no-ligatures text-theme-secondary-700 bg-theme-secondary-200 border-theme-secondary-200 dark:border-theme-secondary-800 dark:text-theme-secondary-500 dark:bg-transparent group-hover:bg-theme-secondary-300 dark:group-hover:bg-transparent text-xs leading-[15px] !flex h-[21px] w-12 min-w-12 items-center justify-center rounded px-1 py-[3px] dark:border"
                  data-testid="TransactionRowAddressing__label"
                >
                  From
                </div>
                <div
                  class="flex min-w-36 grow items-center justify-between space-x-4"
                >
                  <div
                    class="grow"
                    data-testid="TransactionRowAddressing__address-container"
                  >
                    <div
                      class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                    >
                      <span
                        class="font-semibold text-sm text-theme-text"
                        data-testid="Address__alias"
                      >
                        <span
                          class="no-ligatures transition-colors duration-200"
                          data-testid="TruncateEnd"
                        >
                          Mainsail Wallet …
                        </span>
                      </span>
                    </div>
                  </div>
                  <button
                    class="ring-focus relative focus:outline-none"
                    data-ring-focus-margin="-m-1"
                    data-testid="clipboard-icon__wrapper"
                    type="button"
                  >
                    <div
                      class="text-theme-secondary-700 hover:text-theme-primary-700 dark:text-theme-secondary-600 dark:hover:text-white"
                    >
                      <div
                        style="height: 16px; width: 16px;"
                      >
                        <svg
                          id="copy"
                          style="height: 100%; width: 100%;"
                          viewBox="0 0 20 20"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <g
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          >
                            <path
                              d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                            />
                            <path
                              d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                            />
                          </g>
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                class="md-lg:hidden"
              >
                <div
                  class="flex w-full flex-row gap-2"
                  data-testid="TransactionRowAddressing__container_advanced_recipient"
                >
                  <div
                    class="inline-block font-semibold overflow-hidden no-ligatures text-theme-secondary-700 bg-theme-secondary-200 border-theme-secondary-200 dark:border-theme-secondary-800 dark:text-theme-secondary-500 dark:bg-transparent group-hover:bg-theme-secondary-300 dark:group-hover:bg-transparent text-xs leading-[15px] !flex h-[21px] w-12 min-w-12 items-center justify-center rounded px-1 py-[3px] dark:border"
                    data-testid="TransactionRowAddressing__label"
                  >
                    To
                  </div>
                  <div
                    class="flex min-w-36 grow items-center justify-between space-x-4"
                  >
                    <div
                      class="grow"
                      data-testid="TransactionRowAddressing__address-container"
                    >
                      <div
                        class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                      >
                        <span
                          class="font-semibold text-sm text-theme-text"
                          data-testid="Address__alias"
                        >
                          <span
                            class="no-ligatures transition-colors duration-200"
                            data-testid="TruncateEnd"
                          >
                            Mainsail Wallet …
                          </span>
                        </span>
                      </div>
                    </div>
                    <button
                      class="ring-focus relative focus:outline-none"
                      data-ring-focus-margin="-m-1"
                      data-testid="clipboard-icon__wrapper"
                      type="button"
                    >
                      <div
                        class="text-theme-secondary-700 hover:text-theme-primary-700 dark:text-theme-secondary-600 dark:hover:text-white"
                      >
                        <div
                          style="height: 16px; width: 16px;"
                        >
                          <svg
                            id="copy"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <g
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            >
                              <path
                                d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                              />
                              <path
                                d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                              />
                            </g>
                          </svg>
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden md-lg:table-cell"
        >
          <div
            class="flex transition-colors duration-100 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200 space-x-4 items-start px-0 lg:px-3 xl:pt-3 xl:min-h-11 min-h-16 my-1 py-2 lg:min-w-36"
          >
            <div
              class="flex w-full flex-row gap-2"
              data-testid="TransactionRowAddressing__container_advanced_recipient"
            >
              <div
                class="inline-block font-semibold overflow-hidden no-ligatures text-theme-secondary-700 bg-theme-secondary-200 border-theme-secondary-200 dark:border-theme-secondary-800 dark:text-theme-secondary-500 dark:bg-transparent group-hover:bg-theme-secondary-300 dark:group-hover:bg-transparent text-xs leading-[15px] !flex h-[21px] w-12 min-w-12 items-center justify-center rounded px-1 py-[3px] dark:border"
                data-testid="TransactionRowAddressing__label"
              >
                To
              </div>
              <div
                class="flex min-w-36 grow items-center justify-between space-x-4"
              >
                <div
                  class="grow"
                  data-testid="TransactionRowAddressing__address-container"
                >
                  <div
                    class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                  >
                    <span
                      class="font-semibold text-sm text-theme-text"
                      data-testid="Address__alias"
                    >
                      <span
                        class="no-ligatures transition-colors duration-200"
                        data-testid="TruncateEnd"
                      >
                        Mainsail Wallet …
                      </span>
                    </span>
                  </div>
                </div>
                <button
                  class="ring-focus relative focus:outline-none"
                  data-ring-focus-margin="-m-1"
                  data-testid="clipboard-icon__wrapper"
                  type="button"
                >
                  <div
                    class="text-theme-secondary-700 hover:text-theme-primary-700 dark:text-theme-secondary-600 dark:hover:text-white"
                  >
                    <div
                      style="height: 16px; width: 16px;"
                    >
                      <svg
                        id="copy"
                        style="height: 100%; width: 100%;"
                        viewBox="0 0 20 20"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <g
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        >
                          <path
                            d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                          />
                          <path
                            d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                          />
                        </g>
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden"
        >
          <div
            class="flex transition-colors duration-100 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200 space-x-4 items-start my-1 px-0 lg:px-3 xl:pt-3 xl:min-h-11 min-h-14 pt-2 mt-1 lg:min-w-36"
          >
            <div
              class="flex w-full flex-row gap-2"
              data-testid="TransactionRowAddressing__container"
            >
              <div
                class="inline-block font-semibold overflow-hidden no-ligatures text-theme-danger-info-text bg-theme-danger-info-background dark:bg-transparent dark:border-theme-danger-info-border text-xs leading-[15px] !flex h-[21px] w-12 min-w-12 items-center justify-center rounded px-1 py-[3px] dark:border"
                data-testid="TransactionRowAddressing__label"
              >
                To
              </div>
              <div
                class="flex min-w-36 grow items-center justify-between space-x-4"
              >
                <div
                  class="grow"
                  data-testid="TransactionRowAddressing__address-container"
                >
                  <div
                    class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                  >
                    <span
                      class="font-semibold text-sm text-theme-text"
                      data-testid="Address__alias"
                    >
                      <span
                        class="no-ligatures transition-colors duration-200"
                        data-testid="TruncateEnd"
                      >
                        Mainsail Wallet …
                      </span>
                    </span>
                  </div>
                </div>
                <button
                  class="ring-focus relative focus:outline-none"
                  data-ring-focus-margin="-m-1"
                  data-testid="clipboard-icon__wrapper"
                  type="button"
                >
                  <div
                    class="text-theme-secondary-700 hover:text-theme-primary-700 dark:text-theme-secondary-600 dark:hover:text-white"
                  >
                    <div
                      style="height: 16px; width: 16px;"
                    >
                      <svg
                        id="copy"
                        style="height: 100%; width: 100%;"
                        viewBox="0 0 20 20"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <g
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        >
                          <path
                            d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                          />
                          <path
                            d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                          />
                        </g>
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden lg:table-cell"
        >
          <div
            class="flex px-3 transition-colors duration-100 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200 justify-end items-start my-1 min-h-14 pt-2 xl:min-h-11 xl:my-0 xl:pt-3 lg:w-34 xl:w-auto"
          >
            <div
              class="flex flex-col items-end gap-1"
            >
              <span
                class="whitespace-nowrap text-sm font-semibold"
                data-testid="Amount"
              >
                121
              </span>
              <span
                class="text-xs font-semibold text-theme-secondary-700 lg:hidden"
                data-testid="TransactionRow__exchange-currency"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  0 ARK
                </span>
              </span>
            </div>
          </div>
        </td>
        <td>
          <div
            class="flex px-3 transition-colors duration-100 pr-3 mr-3 rounded-r dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200 justify-end items-start text-sm text-theme-secondary-900 dark:text-theme-secondary-200 font-semibold xl:min-h-11 xl:my-0 xl:pt-3 min-h-[66px] py-1 my-0 md-lg:min-h-14 md-lg:pt-2"
          >
            <span
              class="whitespace-nowrap"
              data-testid="Amount"
            >
              0 ARK
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
